------------------------------------------------------------------------
r1710 | gaser | 2020-09-03 10:58:33

Changed paths:
M       CHANGES.txt
M       cat_run.m

Fixed:   Windows user names with spaces cause trouble with parallel processing 
         in cat_run.m. Thanks to Brendan Balken for providing a solution for 
         that.
------------------------------------------------------------------------
r1709 | gaser | 2020-09-02 12:53:33 +0200 (Mi, 02 Sep 2020) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_main_reportfig.m
M       cat_run_job1639.m

Fixed:   Try to catch some errors in cat_run_job1639.m and cat_main_reportfig.m

------------------------------------------------------------------------
r1708 | gaser | 2020-09-01 22:32:02 +0200 (Di, 01 Sep 2020) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_render.m

Fixed:   Structure sinfo1 has not only one entry in cat_surf_render.m 
         (Thanks to Ningkai Wang for pointing to that error).

------------------------------------------------------------------------
r1707 | gaser | 2020-09-01 21:56:29 +0200 (Di, 01 Sep 2020) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_io_writenii.m
M       cat_main_roi.m

Fixed:   Catched call to spm_diffeo('pull') for older SPM12 versions.

------------------------------------------------------------------------
r1706 | gaser | 2020-09-01 21:48:12 +0200 (Di, 01 Sep 2020) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_io_writenii.m

Fixed:   Catched call to spm_diffeo('pull') for older SPM12 versions.

------------------------------------------------------------------------
r1705 | gaser | 2020-08-31 22:49:54 +0200 (Mo, 31 Aug 2020) | 36 lines

Changed paths:
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
M       Makefile
M       cat_amap.mexa64
M       cat_conf_stools.m
M       cat_conf_tools.m
MM      cat_long_main.m
M       cat_ornlm.mexa64
M       cat_sanlm.mexa64
M       cat_stat_TIV.m